correccion de indentacion

--- a/proyecto-integrador/views/partials/footer.ejs
+++ b/proyecto-integrador/views/partials/footer.ejs
@@ -20,7 +20,8 @@
                 <article class="footer-data">
                     <i class="fas fa-user-shield"></i>
                     <h2>Seguridad, de principio a fin</h2>
-                    <p>¿No te gusta? ¡Devolvelo! En ICONIC, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
+                    <p>¿No te gusta? ¡Devolvelo! En ICONIC, no hay nada que no puedas hacer, porque estás siempre
+                        protegido.</p>
                 </article>
             </div>
             <div class="col-12 col-lg-4">
