--- a/proyecto-integrador/views/product-add.ejs
+++ b/proyecto-integrador/views/product-add.ejs
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
-    <%- include('./partials/head') %>
-<body>
-    <%- include('./partials/headerLogueado') %>
-	<main class="mainRegister"></main>
-	<div class="col-12">
-		<h2 class="products-title"><%= mensaje %></h2>
-	</div>
-	<div class="container__form">
-		<img src="/images/logo.png" alt="">
-		<form class="form-data" action="/" method="get">
-			<div class="contenedor-input">
-				<input class="form-file" type="file" placeholder="Imagen" required>
-				<label class="form-label" for="imagen"></label>
-			</div>
+<%- include('./partials/head') %>
 
-			<div class="contenedor-input">
-				<input class="form-input" type="text" placeholder="Nombre del producto" required>
-				<label class="form-label" for="producto"></label>
+	<body>
+		<%- include('./partials/headerLogueado') %>
+			<main class="mainRegister"></main>
+			<div class="col-12">
+				<h2 class="products-title">
+					<%= mensaje %>
+				</h2>
 			</div>
+			<div class="container__form">
+				<img src="/images/logo.png" alt="">
+				<form class="form-data" action="/" method="get">
+					<div class="contenedor-input">
+						<input class="form-file" type="file" placeholder="Imagen" required>
+						<label class="form-label" for="imagen"></label>
+					</div>
 
-			<div class="contenedor-input">
-				<textarea class="form-input" type="textarea" placeholder="Descripción" required></textarea>
-				<label class="form-label" for="descripcion"></label>
-			</div>
+					<div class="contenedor-input">
+						<input class="form-input" type="text" placeholder="Nombre del producto" required>
+						<label class="form-label" for="producto"></label>
+					</div>
 
-			<div class="contenedor-input1">
-				<input class="form-input__button" type="submit" value="Agregar">
-				<label class="form-label" for="Agregar"></label>
+					<div class="contenedor-input">
+						<textarea class="form-input" type="textarea" placeholder="Descripción" required></textarea>
+						<label class="form-label" for="descripcion"></label>
+					</div>
+
+					<div class="contenedor-input1">
+						<input class="form-input__button" type="submit" value="Agregar">
+						<label class="form-label" for="Agregar"></label>
+					</div>
+				</form>
 			</div>
-		</form>
-	</div>
-	</main>
-    <%- include('./partials/footer') %>
-</body>
-<script src="/js/uikit.min.js"></script>
-<script src="/js/header-scroll.js"></script>
+			</main>
+			<%- include('./partials/footer') %>
+	</body>
+	<script src="/js/uikit.min.js"></script>
+	<script src="/js/header-scroll.js"></script>
+
 </html>
