--- a/proyecto-integrador/views/profile.ejs
+++ b/proyecto-integrador/views/profile.ejs
@@ -1,66 +1,72 @@
 <!DOCTYPE html>
 <html lang="es">
-    <%- include('./partials/head') %>
-<body>
-    <%- include('./partials/headerLogueado') %>
-	<!-- Datos del usuario -->
-	<section class="info-usuario products-wrapper details">
-		<div class="row">
-			<div class="img-container offset-3 col-2">
-				<img src="<%= fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
-			</div>
-			<div class="data-container col-6">
-				<div class="d-flex align-items-center ">
-					<h1 class="main-title-profile"><%= nombreUsuario %>
-						<a class="profile-a" href="/users/profile/edit">
-							<i class="fas fa-cog"></i>
-						</a>
-					</h1>
-					<a class="profile-a"  class="btn mt-3 ml-4" href="">SEGUIR</a>
+<%- include('./partials/head') %>
+
+	<body>
+		<%- include('./partials/headerLogueado') %>
+			<!-- Datos del usuario -->
+			<section class="info-usuario products-wrapper details">
+				<div class="row">
+					<div class="img-container offset-3 col-2">
+						<img src="<%= fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
+					</div>
+					<div class="data-container col-6">
+						<div class="d-flex align-items-center ">
+							<h1 class="main-title-profile">
+								<%= nombreUsuario %>
+									<a class="profile-a" href="/users/profile/edit">
+										<i class="fas fa-cog"></i>
+									</a>
+							</h1>
+							<a class="profile-a" class="btn mt-3 ml-4" href="">SEGUIR</a>
+						</div>
+						<div>
+							<ul class="profile-ul">
+								<li class="profile-li">8 productos</li>
+								<li class="profile-li">200 seguidores</li>
+								<li class="profile-li">300 comentarios</li>
+							</ul>
+						</div>
+					</div>
 				</div>
-				<div>
-					<ul class="profile-ul">
-						<li class="profile-li">8 productos</li>
-						<li class="profile-li">200 seguidores</li>
-						<li class="profile-li">300 comentarios</li>
-					</ul>
+			</section>
+			<!-- /Datos del usuario -->
+
+			<!-- Mis productos -->
+			<div class="container products-wrapper">
+				<div class="row">
+					<div class="col-12">
+						<h2 class="products-title">Mis productos</h2>
+					</div>
+					<!-- Show mis productos -->
+					<% for (let i=0; i < 4; i++ ) { %>
+						<div class="col-12 col-sm-6 col-lg-3">
+							<section class="product-box">
+								<a href="/product/<%= index[i].id %>">
+									<figure class="product-box_image">
+										<img src="<%= index[i].imagen %>" alt="">
+									</figure>
+									<article class="product-box_data">
+										<h2>
+											<%= index[i].nombreProducto %>
+										</h2>
+										<p>
+											<%= index[i].descripcion %>
+										</p>
+										<p>Comentarios: 3</p>
+									</article>
+								</a>
+							</section>
+						</div>
+						<% } %>
+
+
 				</div>
 			</div>
-		</div>
-	</section>
-	<!-- /Datos del usuario -->
-
-	<!-- Mis productos -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Mis productos</h2>
-			</div>
-			<!-- Show mis productos -->
-			<% for (let i=0; i < 4; i++ ) { %>	
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-						<a href="/product/<%= index[i].id %>">
-							<figure class="product-box_image">
-								<img src="<%= index[i].imagen %>" alt="">
-							</figure>
-							<article class="product-box_data">
-								<h2><%= index[i].nombreProducto %></h2>
-								<p><%= index[i].descripcion %></p>
-								<p>Comentarios: 3</p>
-							</article>
-						</a>
-				</section>
-			</div>
-			<% } %>
-
-
-		</div>
-	</div>
-	<!-- /Mis productos -->
-    <%- include('./partials/footer') %>
-</body>
-<script src="/js/uikit.min.js"></script>
-<script src="/js/header-scroll.js"></script>
+			<!-- /Mis productos -->
+			<%- include('./partials/footer') %>
+	</body>
+	<script src="/js/uikit.min.js"></script>
+	<script src="/js/header-scroll.js"></script>
 
 </html>
