--- a/proyecto-integrador/views/partials/head.ejs
+++ b/proyecto-integrador/views/partials/head.ejs
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link width="" rel="shortcut icon" href="/images/icon.png" />
+    <link width="20px" rel="shortcut icon" href="/images/logoL.png" />
     <title>Iconic | Otoño-invierno 2024 </title>
     <!-- Font Awesome Stylesheet -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
