--- a/proyecto-integrador/public/stylesheets/app.css
+++ b/proyecto-integrador/public/stylesheets/app.css
@@ -212,8 +212,8 @@ header {
 }
 
 .details__search{
-  margin-top: 0;
-  margin-bottom: -2em;
+  margin-top: 0 !important;
+  margin-bottom: -2em !important;
   padding: 10em 0 0 0;
 }
 
