--- a/proyecto-integrador/views/register.ejs
+++ b/proyecto-integrador/views/register.ejs
@@ -13,28 +13,33 @@
 				<img src="/images/logo.png" alt="">
 				<form class="form-data" action="/login" method="get">
 					<div class="contenedor-input">
-						<input class="form-input" type="email" placeholder="Correo eletrónico" required>
+						<input class="form-input" type="email" name="email" placeholder="Correo eletrónico" required>
 						<label class="form-label" for="email"></label>
 					</div>
 
 					<div class="contenedor-input">
-						<input class="form-input" type="text" placeholder="Usuario" required>
-						<label class="form-label" for="nombreDeUsuario"></label>
+						<input class="form-input" type="text" name="user" placeholder="Usuario" required>
+						<label class="form-label" for="user"></label>
 					</div>
 
 					<div class="contenedor-input">
-						<input class="form-input" type="password" placeholder="Contraseña" required>
-						<label class="form-label" for="contraseña"></label>
+						<input class="form-input" type="password" name="password" placeholder="Contraseña" required>
+						<label class="form-label" for="password"></label>
 					</div>
 
 					<div class="contenedor-input">
-						<input class="form-input" type="date" placeholder="Fecha de nacimiento" required>
-						<label class="form-label" for="fecha"></label>
+						<input class="form-input" type="date" name="birthDate" placeholder="Fecha de nacimiento" required>
+						<label class="form-label" for="birthDate"></label>
 					</div>
 
 					<div class="contenedor-input">
-						<input class="form-input" type="number" placeholder="Numero de documento" required>
-						<label class="form-label" for="documento"></label>
+						<input class="form-input" type="number" name="dni" placeholder="Numero de documento" required>
+						<label class="form-label" for="dni"></label>
+					</div>
+
+					<div class="contenedor-input">
+						<input class="form-input" type="text" name="profilePic" placeholder="Foto" required>
+						<label class="form-label" for="profilePic"></label>
 					</div>
 
 					<div class="contenedor-input1">
