arreglo de modelos, comienzo de validaciones del login

--- a/proyecto-integrador/views/login.ejs
+++ b/proyecto-integrador/views/login.ejs
@@ -13,17 +13,17 @@
 				<img src="/images/logo.png" alt="">
 				<form class="form-data" action="/users/profile" method="get">
 					<div class="contenedor-input">
-						<input class="form-input" type="email" placeholder="Correo eletrónico" required>
+						<input class="form-input" name="email" type="email" placeholder="Correo eletrónico" required>
 						<label class="form-label" for="nombreDeUsuario"></label>
 					</div>
 
 					<div class="contenedor-input">
-						<input class="form-input" type="password" placeholder="Contraseña" required>
+						<input class="form-input" name="password" type="password" placeholder="Contraseña" required>
 						<label class="form-label" for="contraseña"></label>
 					</div>
 
 					<div class="contenedor-input__checkbox">
-						<input class="form-input__checkbox" type="checkbox" value="Recordarme">
+						<input class="form-input__checkbox" name="checkbox" type="checkbox" value="Recordarme">
 						<label class="form-label" for="recordarme">Recordarme</label>
 					</div>
 					<div class="contenedor-input1">
