--- a/proyecto-integrador/views/login.ejs
+++ b/proyecto-integrador/views/login.ejs
@@ -11,14 +11,20 @@
 			</div>
 			<div class="container__form">
 				<img src="/images/logo.png" alt="">
-				<form class="form-data" action="/users/profile" method="get">
+				<form class="form-data" action="/login" method="post">
 					<div class="contenedor-input">
-						<input class="form-input" name="email" type="email" placeholder="Correo eletrónico" required>
+						<input class="form-input" name="email" type="email" placeholder="Correo eletrónico" value="<%= locals.oldData && oldData.email ? oldData.email : null %>">
+						<% if(locals.errors && errors.email) { %>  
+                            <div class="error-msg"> <%= errors.email.msg %>
+                       <% } %> 
 						<label class="form-label" for="nombreDeUsuario"></label>
 					</div>
 
 					<div class="contenedor-input">
-						<input class="form-input" name="password" type="password" placeholder="Contraseña" required>
+						<input class="form-input" name="password" type="password" placeholder="Contraseña">
+						<% if(locals.errors && errors.password) { %>  
+                            <div class="error-msg"> <%= errors.password.msg %>
+                       <% } %> 
 						<label class="form-label" for="contraseña"></label>
 					</div>
 
