--- a/proyecto-integrador/views/search-results.ejs
+++ b/proyecto-integrador/views/search-results.ejs
@@ -12,19 +12,19 @@
 					</h2>
 				</div>
 				<!-- Show the "ultimos" products -->
-				<% for( let i=0; i < index.length; i++ ) { %>
+				<% for( let i=0; i < products.length; i++ ) { %>
 					<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
-							<a href="/product/<%= index[i].id %>">
+							<a href="/product/<%= products[i].id %>">
 								<figure class="product-box_image">
-									<img src="<%= index[i].imagen %>" alt="">
+									<img src="<%= products[i].imagen %>" alt="">
 								</figure>
 								<article class="product-box_data">
 									<h2>
-										<%= index[i].nombreProducto %>
+										<%= products[i].nombreProducto %>
 									</h2>
 									<p>
-										<%= index[i].descripcion %>
+										<%= products[i].descripcion %>
 									</p>
 									<p>Comentarios: 3</p>
 								</article>
