--- a/proyecto-integrador/views/register.ejs
+++ b/proyecto-integrador/views/register.ejs
@@ -11,7 +11,7 @@
 			</div>
 			<div class="container__form">
 				<img src="/images/logo.png" alt="">
-				<form class="form-data" action="/login" method="post">
+				<form class="form-data" action="/register" method="post">
 					<div class="contenedor-input">
 						<label class="form-label" for="email"></label>
 						<input class="form-input" type="email" name="email" placeholder="Correo eletrónico" value="<%= locals.oldData && oldData.email ? oldData.email : null %>">
