--- a/proyecto-integrador/views/partials/header.ejs
+++ b/proyecto-integrador/views/partials/header.ejs
@@ -20,7 +20,7 @@
                     <a class="uk-navbar-toggle" href uk-search-icon></a>
                     <div class="uk-drop" uk-drop="mode: click; pos: left-center; offset: 0">
                         <div class="uk-search uk-search-navbar uk-width-1-1">
-                            <form class="uk-search-input" action="/product/search/" method="GET">
+                            <form class="uk-search-input" action="/products/search/" method="GET">
                                 <input class="uk-search-input" type="search" name="search" placeholder="search"
                                     aria-label="Search" autofocus>
                             </form>
