--- a/proyecto-integrador/views/partials/header.ejs
+++ b/proyecto-integrador/views/partials/header.ejs
@@ -8,7 +8,9 @@
         <div>
             <ul class="ul-navbar-center">
                 <li class="nav__ul-li"><a class="ul__li-a" href="/">TODOS LOS PRODUCTOS</a></li>
-                <li class="nav__ul-li"><a class="ul__li-a" href="/product/add">AGREGAR PRODUCTOS</a></li>
+                <% if(locals.user){ %>
+                <li class="nav__ul-li"><a class="ul__li-a" href="/add">AGREGAR PRODUCTOS</a></li>
+                <% } %>
             </ul>
         </div>
         <button class="btn-toggle-navbar">
@@ -28,8 +30,9 @@
                     </div>
                 </li>
                 <li class="nav__ul-li">
-                    <a class="ul__li-a" href="/register"><i class="far fa-address-card"></i>
-                    </a>
+                    <% if(!locals.user){ %>
+                    <a class="ul__li-a" href="/register"><i class="far fa-address-card"></i></a>
+                    <% } %>
                 </li>
                 <li class="nav__ul-li">
                     <a class="ul__li-a" href="/login"><i class="fas fa-sign-in-alt"></i></a>
