--- a/proyecto-integrador/views/login.ejs
+++ b/proyecto-integrador/views/login.ejs
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
 <%- include('./partials/head') %>
+<body>
+    <%- include('./partials/header') %>
+    <main class="mainRegister">
+        <div class="col-12">
+            <h2 class="products-title">Inicia sesión</h2>
+        </div>
+        <div class="container__form">
+            <img src="/images/logo.png" alt="">
+            <form class="form-data" action="/login" method="post">
+                <div class="contenedor-input">
+                    <input class="form-input" name="email" type="email" placeholder="Correo electrónico" value="<%= locals.oldData && oldData.email ? oldData.email : '' %>">
+                    <% if(locals.errors && errors.email) { %>  
+                        <div class="error-msg"> <%= errors.email.msg %> </div>
+                    <% } %>
+                    <label class="form-label" for="nombreDeUsuario"></label>
+                </div>
 
-	<body>
-		<%- include('./partials/header') %>
-			<!-- Novedades -->
-			<main class="mainRegister"></main>
-			<div class="col-12">
-				<h2 class="products-title">Inicia sesión</h2>
-			</div>
-			<div class="container__form">
-				<img src="/images/logo.png" alt="">
-				<form class="form-data" action="/login" method="post">
-					<div class="contenedor-input">
-						<input class="form-input" name="email" type="email" placeholder="Correo eletrónico" value="<%= locals.oldData && oldData.email ? oldData.email : null %>">
-						<% if(locals.errors && errors.email) { %>  
-                            <div class="error-msg"> <%= errors.email.msg %>
-                       <% } %> 
-						<label class="form-label" for="nombreDeUsuario"></label>
-					</div>
+                <div class="contenedor-input">
+					<label class="form-label" for="contraseña"></label>
+                    <input class="form-input" name="contrasenia" type="password" placeholder="Contraseña">
+                    <% if(locals.errors && errors.contrasenia) { %>  
+                        <div class="error-msg"> <%= errors.contrasenia.msg %> </div>
+                    <% } %>
+                </div>
 
-					<div class="contenedor-input">
-						<input class="form-input" name="password" type="password" placeholder="Contraseña">
-						<% if(locals.errors && errors.password) { %>  
-                            <div class="error-msg"> <%= errors.password.msg %>
-                       <% } %> 
-						<label class="form-label" for="contraseña"></label>
-					</div>
-
-					<div class="contenedor-input__checkbox">
-						<input class="form-input__checkbox" name="checkbox" type="checkbox" value="Recordarme">
-						<label class="form-label" for="recordarme">Recordarme</label>
-					</div>
-					<div class="contenedor-input1">
-						<input class="form-input__button" type="submit" value="Iniciar sesion">
-						<label class="form-label" for="iniciarSesión"></label>
-					</div>
-				</form>
-			</div>
-			</main>
-
-			<%- include('./partials/footer') %>
-	</body>
-	<script src="/js/uikit.min.js"></script>
-	<script src="/js/header-scroll.js"></script>
-
+                <div class="contenedor-input__checkbox">
+                    <input class="form-input__checkbox" name="checkbox" type="checkbox" value="Recordarme">
+                    <label class="form-label" for="recordarme">Recordarme</label>
+                </div>
+                <div class="contenedor-input1">
+                    <input class="form-input__button" type="submit" value="Iniciar sesion">
+                    <label class="form-label" for="iniciarSesión"></label>
+                </div>
+            </form>
+        </div>
+    </main>
+    <%- include('./partials/footer') %>
+    <script src="/js/uikit.min.js"></script>
+    <script src="/js/header-scroll.js"></script>
+</body>
 </html>
