--- a/proyecto-integrador/views/product-edit.ejs
+++ b/proyecto-integrador/views/product-edit.ejs
@@ -12,7 +12,7 @@
 			</div>
 			<div class="container__form">
 				<img src="/images/logo.png" alt="">
-				<form class="form-data" action="/products/update/<%= product.id %>" method="post">
+				<form class="form-data" action="/update/<%= product.id %>" method="post">
 					<div class="contenedor-input">
 						<input class="form-file" type="file" placeholder="Imagen" required>
 						<label class="form-label" for="imagen"></label>
