--- a/proyecto-integrador/views/product.ejs
+++ b/proyecto-integrador/views/product.ejs
@@ -41,8 +41,8 @@
 
 
                                         <form class="form" action="/" method="GET">
-                                            <input class="form-input" type="text" value=""
-                                                placeholder="Agregar comentario">
+                                            <input class="form-input" type="text" value="" placeholder="Agregar comentario">
+                                            <label class="form-label" for="comentario"></label>
                                             <button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
                                         </form>
                                         <hr>
