--- a/proyecto-integrador/views/partials/header.ejs
+++ b/proyecto-integrador/views/partials/header.ejs
@@ -35,7 +35,9 @@
                     <% } %>
                 </li>
                 <li class="nav__ul-li">
+                    <% if(!locals.user){ %>
                     <a class="ul__li-a" href="/login"><i class="fas fa-sign-in-alt"></i></a>
+                    <% } %>
                 </li>
             </ul>
         </div>
