--- a/proyecto-integrador/views/partials/headerLogueado.ejs
+++ b/proyecto-integrador/views/partials/headerLogueado.ejs
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="nav__ul-li">
-                    <form action="/" method="get">
+                    <form action="/logout" method="post">
                         <button class="button-logueado" class="logout" type="submit">
                             Cerrar sesión <i class="fas fa-sign-in-alt"></i>
                         </button>
