--- a/proyecto-integrador/views/profile.ejs
+++ b/proyecto-integrador/views/profile.ejs
@@ -8,12 +8,12 @@
 			<section class="info-usuario products-wrapper details">
 				<div class="row">
 					<div class="img-container offset-3 col-2">
-						<img src="<%= fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
+						<img src="<%= usuario.fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
 					</div>
 					<div class="data-container col-6">
 						<div class="d-flex align-items-center ">
 							<h1 class="main-title-profile">
-								<%= nombreUsuario %>
+								<%= usuario.nombreUsuario %>
 									<a class="profile-a" href="/users/profile/edit">
 										<i class="fas fa-cog"></i>
 									</a>
@@ -36,24 +36,24 @@
 			<div class="container products-wrapper">
 				<div class="row">
 					<div class="col-12">
-						<h2 class="products-title">Mis productos</h2>
+						<h2 class="products-title">Mis productos: <%= productos.length %></h2>
 					</div>
 					<!-- Show mis productos -->
-					<% for (let i=0; i < 4; i++ ) { %>
+					<% for (let i=0; i < usuario.productos.length; i++ ) { %>
 						<div class="col-12 col-sm-6 col-lg-3">
 							<section class="product-box">
-								<a href="/product/<%= index[i].id %>">
+								<a href="/product/<%= usuario.productos.[i].id %>">
 									<figure class="product-box_image">
-										<img src="<%= index[i].imagen %>" alt="">
+										<img src="<%= usuario.productos.[i].imagen %>" alt="">
 									</figure>
 									<article class="product-box_data">
 										<h2>
-											<%= index[i].nombreProducto %>
+											<%= usuario.productos.[i].nombre %>
 										</h2>
 										<p>
-											<%= index[i].descripcion %>
+											<%= usuario.productos.[i].descripcion %>
 										</p>
-										<p>Comentarios: 3</p>
+										<p>Comentarios: <%= productos.comentarios.length %></p>
 									</article>
 								</a>
 							</section>
