login desarrollo completo, logout completo

--- a/proyecto-integrador/views/profile.ejs
+++ b/proyecto-integrador/views/profile.ejs
@@ -3,7 +3,7 @@
 <%- include('./partials/head') %>
 
 	<body>
-		<%- include('./partials/headerLogueado') %>
+		<%- include('./partials/headerLogueado', { nombreUsuario: locals.user.nombreUsuario }) %>
 			<!-- Datos del usuario -->
 			<section class="info-usuario products-wrapper details">
 				<div class="row">
