--- a/proyecto-integrador/views/partials/headerLogueado.ejs
+++ b/proyecto-integrador/views/partials/headerLogueado.ejs
@@ -16,8 +16,8 @@
                     <a class="uk-navbar-toggle" href uk-search-icon></a>
                     <div class="uk-drop" uk-drop="mode: click; pos: left-center; offset: 0">
                         <div class="uk-search uk-search-navbar uk-width-1-1">
-                            <form class="uk-search-input">
-                                <input class="uk-search-input" type="search" name="q" placeholder="search"
+                            <form class="uk-search-input" action="/products/search/" method="GET">
+                                <input class="uk-search-input" type="search" name="search" placeholder="search"
                                     aria-label="Search" autofocus>
                             </form>
                         </div>
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="nav__ul-li">
-                    <form action="/logout" method="post">
+                    <form action="/login/logout" method="post">
                         <button class="button-logueado" class="logout" type="submit">
                             Cerrar sesión <i class="fas fa-sign-in-alt"></i>
                         </button>
