--- a/proyecto-integrador/views/product-edit.ejs
+++ b/proyecto-integrador/views/product-edit.ejs
@@ -3,7 +3,7 @@
 <%- include('./partials/head') %>
 
 	<body>
-		<%- include('./partials/headerLogueado') %>
+		<%- include('./partials/headerLogueado', { nombreUsuario: locals.user.nombreUsuario }) %>
 			<main class="mainRegister"></main>
 			<div class="col-12">
 				<h2 class="products-title">
