--- a/proyecto-integrador/views/product.ejs
+++ b/proyecto-integrador/views/product.ejs
@@ -4,7 +4,11 @@
 
     <body id="body__product">
 
-        <%- include('./partials/header') %>
+		<% if (locals.user != undefined) { %>
+			<%- include('./partials/headerLogueado', { nombreUsuario: locals.user.nombreUsuario }) %>
+		<% } else { %>
+			<%- include('./partials/header') %>
+		<% } %>
             <!-- product detail -->
             <div class="products-wrapper details">
                 <div class="product-detail">
