--- a/proyecto-integrador/views/profile-edit.ejs
+++ b/proyecto-integrador/views/profile-edit.ejs
@@ -3,7 +3,7 @@
 <%- include('./partials/head') %>
 
     <body>
-        <%- include('./partials/headerLogueado') %>
+        <%- include('./partials/headerLogueado', { nombreUsuario: locals.user.nombreUsuario }) %>
             <!-- Novedades -->
             <main class="mainRegister"></main>
             <div class="col-12">
