--- a/proyecto-integrador/views/search-results.ejs
+++ b/proyecto-integrador/views/search-results.ejs
@@ -3,7 +3,11 @@
 <%- include('./partials/head') %>
 
 	<body>
-		<%- include('./partials/header') %>
+		<% if (locals.user != undefined) { %>
+			<%- include('./partials/headerLogueado', { nombreUsuario: locals.user.nombreUsuario }) %>
+		<% } else { %>
+			<%- include('./partials/header') %>
+		<% } %>
 			<!-- Novedades -->
 			<div class="products-wrapper details__search">
 				<div class="col-12">
